<resources>
    <string name="app_name">Calculator Assignment</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear">clear</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="delete">delete</string>
    <string name="Exit">Exit</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="clear_string_msg">Long Press for Clearing all the content.</string>
    <string name="no_history_msg">No history found</string>
    <string name="user_name_err_msg">Please enter user name</string>
    <string name="passwrd_err_msg">Please enter password</string>
    <string name="cred_err_msg">Please enter valid credential</string>
</resources>